crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_intersection_types.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"number & string\")"
---
TypeAnn {
    kind: Intersection(
        [
            TypeAnn {
                kind: Number,
                span: 0..6,
                inferred_type: None,
            },
            TypeAnn {
                kind: String,
                span: 9..15,
                inferred_type: None,
            },
        ],
    ),
    span: 0..15,
    inferred_type: None,
}
