crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_literal_types-2.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"true\")"
---
TypeAnn {
    kind: BoolLit(
        true,
    ),
    loc: SourceLocation {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
}
