crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_literal_types-3.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"false\")"
---
TypeAnn {
    kind: BoolLit(
        false,
    ),
    span: 0..5,
}
