crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_literal_types-5.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"undefined\")"
---
TypeAnn {
    kind: Undefined,
    span: 0..9,
}
