crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_literal_types-6.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(r#\"\"hello\"\"#)"
---
TypeAnn {
    kind: StrLit(
        "hello",
    ),
    loc: SourceLocation {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 8,
        },
    },
}
