crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_literal_types.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: "parse(\"123\")"
---
TypeAnn {
    kind: NumLit(
        "123",
    ),
    span: 0..3,
}
