crates/escalier_parser/src/snapshots/escalier_parser__type_ann_parser__tests__parse_object_type_all_sig_types.snap
---
source: crates/escalier_parser/src/type_ann_parser.rs
expression: result
---
TypeAnn {
    kind: Object(
        [
            Call(
                FunctionType {
                    span: 13..55,
                    type_params: None,
                    params: [
                        FuncParam {
                            pattern: Pattern {
                                kind: Ident(
                                    BindingIdent {
                                        name: "a",
                                        span: 35..36,
                                        mutable: false,
                                    },
                                ),
                                span: 35..36,
                                inferred_type: None,
                            },
                            type_ann: Some(
                                TypeAnn {
                                    kind: Number,
                                    span: 38..44,
                                    inferred_type: None,
                                },
                            ),
                            optional: false,
                        },
                    ],
                    ret: TypeAnn {
                        kind: String,
                        span: 49..55,
                        inferred_type: None,
                    },
                    throws: None,
                },
            ),
            Prop(
                Prop {
                    span: 0..0,
                    name: "foo",
                    modifier: None,
                    optional: false,
                    readonly: false,
                    type_ann: TypeAnn {
                        kind: Function(
                            FunctionType {
                                span: 78..102,
                                type_params: None,
                                params: [
                                    FuncParam {
                                        pattern: Pattern {
                                            kind: Ident(
                                                BindingIdent {
                                                    name: "a",
                                                    span: 82..83,
                                                    mutable: false,
                                                },
                                            ),
                                            span: 82..83,
                                            inferred_type: None,
                                        },
                                        type_ann: Some(
                                            TypeAnn {
                                                kind: Number,
                                                span: 85..91,
                                                inferred_type: None,
                                            },
                                        ),
                                        optional: false,
                                    },
                                ],
                                ret: TypeAnn {
                                    kind: String,
                                    span: 96..102,
                                    inferred_type: None,
                                },
                                throws: None,
                            },
                        ),
                        span: 78..80,
                        inferred_type: None,
                    },
                },
            ),
            Prop(
                Prop {
                    span: 0..0,
                    name: "bar",
                    modifier: None,
                    optional: false,
                    readonly: false,
                    type_ann: TypeAnn {
                        kind: Function(
                            FunctionType {
                                span: 125..155,
                                type_params: None,
                                params: [
                                    FuncParam {
                                        pattern: Pattern {
                                            kind: Ident(
                                                BindingIdent {
                                                    name: "self",
                                                    span: 129..133,
                                                    mutable: false,
                                                },
                                            ),
                                            span: 129..133,
                                            inferred_type: None,
                                        },
                                        type_ann: None,
                                        optional: false,
                                    },
                                    FuncParam {
                                        pattern: Pattern {
                                            kind: Ident(
                                                BindingIdent {
                                                    name: "a",
                                                    span: 135..136,
                                                    mutable: false,
                                                },
                                            ),
                                            span: 135..136,
                                            inferred_type: None,
                                        },
                                        type_ann: Some(
                                            TypeAnn {
                                                kind: Number,
                                                span: 138..144,
                                                inferred_type: None,
                                            },
                                        ),
                                        optional: false,
                                    },
                                ],
                                ret: TypeAnn {
                                    kind: String,
                                    span: 149..155,
                                    inferred_type: None,
                                },
                                throws: None,
                            },
                        ),
                        span: 125..127,
                        inferred_type: None,
                    },
                },
            ),
            Prop(
                Prop {
                    span: 0..0,
                    name: "baz",
                    modifier: Some(
                        Getter,
                    ),
                    optional: false,
                    readonly: false,
                    type_ann: TypeAnn {
                        kind: Function(
                            FunctionType {
                                span: 178..198,
                                type_params: None,
                                params: [
                                    FuncParam {
                                        pattern: Pattern {
                                            kind: Ident(
                                                BindingIdent {
                                                    name: "self",
                                                    span: 183..187,
                                                    mutable: false,
                                                },
                                            ),
                                            span: 183..187,
                                            inferred_type: None,
                                        },
                                        type_ann: None,
                                        optional: false,
                                    },
                                ],
                                ret: TypeAnn {
                                    kind: String,
                                    span: 192..198,
                                    inferred_type: None,
                                },
                                throws: None,
                            },
                        ),
                        span: 178..198,
                        inferred_type: None,
                    },
                },
            ),
            Prop(
                Prop {
                    span: 0..0,
                    name: "baz",
                    modifier: Some(
                        Setter,
                    ),
                    optional: false,
                    readonly: false,
                    type_ann: TypeAnn {
                        kind: Function(
                            FunctionType {
                                span: 221..263,
                                type_params: None,
                                params: [
                                    FuncParam {
                                        pattern: Pattern {
                                            kind: Ident(
                                                BindingIdent {
                                                    name: "self",
                                                    span: 226..229,
                                                    mutable: true,
                                                },
                                            ),
                                            span: 226..229,
                                            inferred_type: None,
                                        },
                                        type_ann: None,
                                        optional: false,
                                    },
                                    FuncParam {
                                        pattern: Pattern {
                                            kind: Ident(
                                                BindingIdent {
                                                    name: "value",
                                                    span: 236..241,
                                                    mutable: false,
                                                },
                                            ),
                                            span: 236..241,
                                            inferred_type: None,
                                        },
                                        type_ann: Some(
                                            TypeAnn {
                                                kind: String,
                                                span: 243..249,
                                                inferred_type: None,
                                            },
                                        ),
                                        optional: false,
                                    },
                                ],
                                ret: TypeAnn {
                                    kind: Undefined,
                                    span: 254..263,
                                    inferred_type: None,
                                },
                                throws: None,
                            },
                        ),
                        span: 221..263,
                        inferred_type: None,
                    },
                },
            ),
            Prop(
                Prop {
                    span: 0..0,
                    name: "qux",
                    modifier: None,
                    optional: false,
                    readonly: false,
                    type_ann: TypeAnn {
                        kind: String,
                        span: 286..292,
                        inferred_type: None,
                    },
                },
            ),
            Mapped(
                Mapped {
                    key: TypeAnn {
                        kind: TypeRef(
                            "P",
                            None,
                        ),
                        span: 311..312,
                        inferred_type: None,
                    },
                    value: TypeAnn {
                        kind: Number,
                        span: 315..321,
                        inferred_type: None,
                    },
                    target: "P",
                    source: TypeAnn {
                        kind: String,
                        span: 331..337,
                        inferred_type: None,
                    },
                    optional: None,
                    check: None,
                    extends: None,
                },
            ),
        ],
    ),
    span: 13..352,
    inferred_type: None,
}
